Fixed stuttering mobile menu open/close issue w/body scrollbar

--- a/app/styles/core/base.less
+++ b/app/styles/core/base.less
@@ -7,6 +7,7 @@ html, body {
 body {
     padding: 30px 0px 75px 0px;
     overflow-y: scroll;
+    position: static;
     
     font-family: Arial;
     font-size: 14px;
